<resources>
    <string name="app_name">BetterGRT</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="google_app_id">347140174202</string>
    <string name="log_tag">BetterGRT</string>

    // navigation drawer strings
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_near_me">Near Me</string>
    <string name="navigation_map">Map</string>
    <string name="navigation_favourites">Favourites</string>
    <string name="navigation_theme">Theme</string>
    <string name="navigation_share">Share</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_about">About</string>
    <string name="navigation_donate">Donate</string>

    <string name="action_settings">Settings</string>

    <string name="web_service_url">http://better-grt.azurewebsites.net/databaseconnector.asmx</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
